2007-08-04  Sayamindu Dasgupta <sayamindu@gmail.com>
		* nautilus-pathbar.c:
		(nautilus_path_bar_update_path):
		* nautilus-window-manage-views.c:
		(update_up_button):
	Pathbar should not show restricted directories, 
	and the "Up" button/menu item should be disabled in 
	some cases.

2007-08-04	Sayamindu Dasgupta <sayamindu@gmail.com>
		* libnautilus-private/nautilus-lockdown-manager.[ch]:
		* src/nautilus-application.c:
		* src/nautilus-location-entry.c:
		* src/file-manager/fm-tree-model.c:
		* src/file-manager/fm-directory-view.c:
		* src/nautilus-navigation-window.c:
		* src/nautilus-spatial-window.c:
		* libnautilus-private/apps_nautilus_preferences.schemas.in:
		* libnautilus-private/nautilus-global-preferences.[ch]:
	Added support for restricted filesystem view (part of Summer of 
	Code 2007)

2007-08-04	Sayamindu Dasgupta <sayamindu@gmail.com>
		* libnautilus-private/nautilus-lockdown-manager.[ch]:
		* libnautilus-private/Makefile.am:
	Added a singleton (NautilusLockdownManager) to manage all 
	lockdown related settings

2007-07-31	Sayamindu Dasgupta <sayamindu@gmail.com>

		* src/file-manager/fm-directory-view.c: 
		(file_list_all_are_folders):	  
		* libnautilus-private/nautilus-desktop-link.[ch]:
		(nautilus_desktop_link_new_from_file):
		* libnautilus-private/apps_nautilus_preferences.schemas.in:
		* libnautilus-private/nautilus-desktop-link-monitor.c:
		(nautilus_desktop_link_monitor_init):
		* libnautilus-private/nautilus-global-preferences.h:
	Initial support for global desktop links (part of Summer of 
	Code 2007)

2007-07-31  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Post release version bump

=== nautilus 2.19.6 ===

2007-07-31  Martin Wehner  <martin.wehner@gmail.com>

	* NEWS:
	Update for release

2007-07-31  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in: Revert dependency on libSM 1.0.2
	added on 2007-07-24 as it makes nautilus unbuildable on
	everything but the most cutting-edge distributions.